<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    android:textAlignment="center"
    tools:context=".Login">

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/yellow_500"
        android:hint="@string/btnIngresar"
        android:onClick="login"
        android:text="@string/btnIngresar"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="411dp"
        android:layout_height="72dp"
        android:background="@color/green_800"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbartext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tbLogin"
        android:text="@string/tbLogin"
        android:textColor="@color/yellow_500"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="@+id/toolbar3" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="52dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:onClick="volver"
        android:rotation="90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/cuenta"
        android:text="@string/cuenta"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="359dp"
        android:layout_height="316dp"
        android:layout_marginTop="24dp"
        android:background="@color/green_900"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:hint="@string/fcuenta"
        android:text="@string/fcuenta"
        android:textColor="@color/yellow_500"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/fcontrasenia"
        android:text="@string/fcontrasenia"
        android:textColor="@color/yellow_500"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fcuenta" />

    <EditText
        android:id="@+id/fcontra"
        android:layout_width="305dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/fcuenta"
        android:layout_width="305dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>